argo/static/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: marfeelns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: welcomepage
        configMap:
          name: welcomepage
          items:
            - key: welcomepage.html
              path: welcomepage.html
      containers:
      - name: nginx-test
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 2
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          httpGet:
            path: /api/health
            port: 8080
          timeoutSeconds: 1
        image: jba416/nginx-sso:oauth-module-1.4
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        volumeMounts:
        - name: nginx-config
          mountPath: "/opt/bitnami/nginx/conf/"
        - name: welcomepage
          mountPath: "/app/"
        resources:
          limits:
            cpu: 100m
            memory: 128M
          requests:
            cpu: 30m
            memory: 50M
