argo/static/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-test
  namespace: marfeel-ns
  labels:
    app: nginx-test
spec:
  selector:
    app: nginx-test
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
