argo/static/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: aperture-nginx-sso
  name: aperture-nginx-sso
  namespace: data-aperture
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-7ca63372, subnet-8f9d4ee9
    alb.ingress.kubernetes.io/target-type: ip
    kubernetes.io/ingress.class: alb
spec:
  #tls:
  #  - hosts:
  #      - '*.dev-k8s-###domain###.cision.com'
  #    secretName: dev-k8s-###domain###-cert
  rules:
  - host: "aperture.dev-ssvcs-usa-gke.int.cision.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aperture-nginx-sso
            port:
              number: 80              
  ingressClassName: nginx-internal
